--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,12 +12,14 @@ jobs:
 
       steps:
          - name: Checkout Repository
-         - uses: actions/checkout@v3
+           uses: actions/checkout@v3
 
          - name: Set Up Buildx
            uses: docker/setup-buildx-actions@v1
+
          - name: Login to docker hub
            run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+
          - name: Build and push to docker image
            run: |
               docker buildx create --use
